[package]
name = "dsa-cli"
version = "0.1.2"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
error-chain = "^0.12.1"
json = "^0.12.1"
rand = "^0.7.3"
regex = "^1.3"
roxmltree = "^0.9.0"
rustyline = "^5.0"

