[package]
name = "dsa-cli"
version = "0.4.0"
authors = ["benaryorg <binary@benary.org>"]
repository = "https://github.com/benaryorg/dsa-cli"
description = "DSA command line client"
readme = "README.md"
license = "ISC"
edition = "2018"

[lib]
name = "dsa"
path = "src/lib.rs"

[[bin]]
name = "dsa-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = [ "derive", "env" ] }
error-chain = "^0.12.1"
json = "^0.12.1"
rand = "^0.8.5"
regex = "^1.3"
roxmltree = "^0.14.0"
rustyline = "^9.1"
shell-words = "^1.1.0"

